finished laboratory exercise 2

--- a/src/main/resources/templates/listStudents.html
+++ b/src/main/resources/templates/listStudents.html
@@ -50,7 +50,7 @@
         </tr>
         <tr>
             <td><b>Course Id</b></td>
-            <td th:text="${session.courseId}"></td>
+            <td name="course" th:value="${course}" th:text="${course}"></td>
         </tr>
     </table>
 </aside>
